# budget_app_cpp

./: .gitignore  CMakeLists.txt  compile_flags.txt
src/: main.cpp
src/backend/db/: db_connection.cpp  db_connection.h
src/backend/models/: budget.cpp  budget.h
src/backend/services/: budget_manager.cpp  budget_manager.h
src/frontend/dialogs/: dialog_init.cpp  dialog_init.h
src/frontend/widgets/: widget_init.cpp  widget_init.h
